--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ AWS_REGION=us-east-1
 S3_BUCKET_NAME=your-bucket-name
 S3_ENDPOINT_URL=
 S3_USE_SSL=True
+
+DATABASE_URL=postgresql://user:password@localhost:5432/dbname
+CELERY_BROKER_URL=redis://localhost:6379/0
