Configured environment variables for Google AI implementation

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,8 @@ S3_USE_SSL=True
 
 DATABASE_URL=postgresql://user:password@localhost:5432/dbname
 CELERY_BROKER_URL=redis://localhost:6379/0
+
+# AI Engines
+ACTIVE_AI_ENGINE=GEMINI
+GEMINI_API_KEY=your_gemini_api_key
+GEMINI_MODEL_NAME=gemini-2.5-flash-lite
